syntax = "proto3";

package auth;
import "user/user.proto";
import "auth/auth.proto";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string name = 3;
}

message RegisterResponse {
    user.User user = 1;
    TokenPair tokens = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    user.User user = 1;
    TokenPair tokens = 2;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    TokenPair tokens = 1;
}

message LogoutRequest {
    string access_token = 1;
}

message LogoutResponse {

}